feat(atelier): add the canonical Java pom with verified toolchain pins